--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@gluestack-ui/core": "^3.0.8",
     "@gluestack-ui/utils": "^3.0.7",
     "@gorhom/bottom-sheet": "^5.0.0-alpha.11",
+    "@hookform/resolvers": "^5.2.2",
     "@legendapp/motion": "^2.4.0",
     "@react-aria/utils": "^3.29.0",
     "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.8",
     "babel-plugin-module-resolver": "^5.0.2",
     "dom-helpers": "^5.2.1",
     "expo": "^54.0.7",
@@ -39,6 +41,7 @@
     "react": "19.1.0",
     "react-aria": "^3.41.1",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.0",
@@ -49,7 +52,8 @@
     "react-native-worklets": "^0.5.1",
     "react-stately": "^3.39.0",
     "tailwind-variants": "^0.1.20",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "zod": "^4.1.9"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
