--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-web": "^0.21.0",
     "react-native-worklets": "^0.5.1",
     "react-stately": "^3.39.0",
+    "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^0.1.20",
     "tailwindcss": "^3.4.17",
     "zod": "^4.1.9"
