--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "expo-web-browser": "~15.0.7",
     "lucide-react-native": "^0.510.0",
     "nativewind": "^4.2.1",
+    "pnpm": "^10.17.1",
     "react": "19.1.0",
     "react-aria": "^3.41.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-native": "0.81.4",
+    "react-native-compass-heading": "^2.0.2",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.0",
